# ophelia-ci

./: .gitignore  Makefile  README.md  common.pb.go  common.proto  generals.go  go.mod  go.sum  health.pb.go  health.proto  health_grpc.pb.go  main.go  main_test.go  ophelia-ci-server_1.0.0_amd64.deb  package.bash  package_deb.bash  package_snap.bash  pyproject.toml  repo.proto  repository.pb.go  repository.proto  repository_grpc.pb.go  signal.pb.go  signal.proto  signal_grpc.pb.go  store.go  update_python_proto.bash  user.pb.go  user.proto  user_grpc.pb.go
.snap/: snapcraft.yaml
charms/: Makefile
client/: Dockerfile  Makefile  auth.go  changelog.bash  config.go  go.mod  main.go  package_deb.bash  package_snap.bash  repository.go  signals.go  user.go
interface/: CHANGELOG  Dockerfile  LICENSE  Makefile  README.rst  create_requirements.bash  fix_pyproject.bash  hello.py  pyproject.toml  pyproject.toml.temp  repository.proto  repository_pb2.py  repository_pb2_grpc.py  tempfile  tmpfile  update_versions.bash
interface/app/: main.py
interface/app/services/: gRPC_service.py  repository.proto  repository_pb2.py  repository_pb2_grpc.py
interface/app/static/scripts/: script.js
interface/app/templates/: base.html  repositories.html  repository.html
interface/app/templates/components/: head.html  modal.html  sidebar.html
interface/src/: ophelia-ci-interface.py  requirements.txt  rockcraft.yaml
interface/src/charm/: charmcraft.yaml
interface/src/charm/src/: charm.py
interface/src/ophelia_ci_interface/: __main__.py  config.py  main.py
interface/src/ophelia_ci_interface/models/: generals.py  health.py  repository.py  user.py
interface/src/ophelia_ci_interface/resources/static/scripts/: script.js
interface/src/ophelia_ci_interface/resources/templates/: login.html  repositories.html  repository.html  unique.html  user.html  users.html
interface/src/ophelia_ci_interface/resources/templates/components/: modal.html  sidebar.html
interface/src/ophelia_ci_interface/routers/: authentication_router.py  dependencies.py  repository_router.py  user_router.py
interface/src/ophelia_ci_interface/services/: common.proto  common_pb2.py  common_pb2_grpc.py  gRPC_service.py  health.proto  health_pb2.py  health_pb2_grpc.py  repository.proto  repository_pb2.py  repository_pb2.pyi  repository_pb2_grpc.py  signal.proto  signal_pb2.py  signal_pb2.pyi  signal_pb2_grpc.py  user.proto  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
interface/src/ophelia_ci_interface/static/scripts/: script.js
interface/src/ophelia_ci_interface/templates/: index.html  repository.html
interface/src/ophelia_ci_interface/templates/components/: modal.html
interface/src/snap/: snapcraft.yaml
k8s/: interface-node-port-service.yaml  ophelia-ci-interface.yaml  ophelia-ci-server.yaml
server/: Dockerfile  Makefile  api.go  authentication_api.go  changelog.bash  config.go  go.mod  main.go  main_functional_test.go  main_test.go  package_deb.bash  repository_api.go  rockcraft.yaml  signals.go  user_api.go
snap/: snapcraft.yaml
(+43 files in other folders)
