[project]
name = "ophelia-ci-interface"
version = "5.0.0"
description = "This is a Python project to create a web page interface for an Ophelia CI server."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi[all]>=0.115.11",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "types-protobuf>=5.29.1.20250315",
    "uvicorn>=0.34.0",
]

[dependency-groups]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "pytest-randomly>=3.16.0",
]
dev = [
    "briefcase>=0.3.22",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[tool.ruff]
preview = true
line-length = 79
exclude = ["app/services/repository_pb2.py", "app/services/repository_pb2_grpc.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72
preview = true


[tool.ruff.lint]
select = ["I", "UP", "F", "E", "W"]

[tool.mypy]
exclude = 'repository_pb2.py|repository_pb2_grpc.py'
